# inventorysystem

./: .editorconfig  .gitignore  100_PERCENT_COMPLETE.md  ABSOLUTE_FINAL.md  AGENT_PROMPT.md  AUDIT_AND_INTEGRATION_REPORT.md  CODE_IMPROVEMENTS.md  CRITICAL_FLAWS_AND_COMMERCIALIZATION_ROADMAP.md  EXECUTIVE_SUMMARY.md  FEATURES_TO_ADD.md  FEATURE_STATUS.md  FINAL_COMPLETE.md  FINAL_SUMMARY.md  FINAL_VERIFICATION.md  FIXES_APPLIED.md  FIXES_SUMMARY.md  IMPLEMENTATION_COMPLETE.md  INDUSTRY_IMPLEMENTATION.md  LICENSING_SYSTEM_VERIFIED.md  MODULAR_ARCHITECTURE.md  MSInventory.spec  PROGRESS_REPORT.md  QUICKSTART.md  README.md  SECURITY_AUDIT_REPORT.md  SETUP_GUIDE.md  TAB_AND_INDUSTRY_STRUCTURE.md  ULTIMATE_FINAL.md  VERIFICATION_REPORT.md  WHATS_NEW.md  build.ps1  build.sh  bypass_wizard.py  check_license.py  config.yaml  fix_and_run.py  industry_debug.txt  pyproject.toml  pyrightconfig.json  quick_backup.py  (+3 more)
.github/workflows/: dotnet-ci.yml  python-ci.yml
.qwen/: settings.json
MintakaEnterprise/: IMPROVEMENTS_SUMMARY.md  Mintaka.sln  README.md  RUN_ON_WINDOWS.md  global.json  run.ps1
MintakaEnterprise/src/Mintaka.Application/: Mintaka.Application.csproj
archive_markdown/: AUDIT_AND_INTEGRATION_REPORT.md  CODE_IMPROVEMENTS.md  EXECUTIVE_SUMMARY.md  FIXES_SUMMARY.md  IMPLEMENTATION_COMPLETE.md  MODULAR_ARCHITECTURE.md  README.md  TAB_AND_INDUSTRY_STRUCTURE.md
backup_all_2026-04-18/: move_to_backup.ps1
backup_python_legacy/: alerts.py  alerts_ui.py  app_core.py  barcode_system.py  base.py  conftest.py  customers_ui.py  dashboard_ui.py  dev_logging.py  electronics_ui.py  error_dashboard_widget.py  error_manager.py  exceptions.py  industry_factory.py  industry_selector.py  industry_service.py  inventory_ui.py  invoicing_ui.py  locations_ui.py  login_ui.py  main_tabs.py  migration_add_industry_type.py  network.py  purchase_orders_ui.py  returns_ui.py  sales_orders_ui.py  sales_ui.py  security.py  setup_licensing_ui.py  smart_dashboard.py  startup_wizard.py  status_widget.py  stock_transfer_ui.py  suppliers_ui.py  sync_engine.py  tab_manager.py  test_modular_architecture.py  test_tabs.py  tradein_service_ui.py  users_ui.py
backups/UI_PRE_OVERHAUL/: MS.spec  barcode_system.py  dashboard_ui.py  database.py  electronics_ui.py  inventory_ui.py  just_login.py  lease_ui.py  license_manager.py  login_ui.py  reports_ui.py  requirements.txt  setup_licensing_ui.py  startup_wizard.py  suppliers_ui.py  ui_theme.py
data/: config.json  inventory.db
data/data/: inventory.db  inventory.json  inventory_backup_v4_20260402_170137.db  license.json  license.json.bak  sales.json
files/: ai_intelligence.py  alerts_ui.py  audit_ui.py  dashboard_ui.py  electronics_ui.py  google_drive_sync.py  logger_setup.py  login_ui.py  main_final.py  sales_ui.py  status_widget.py  test_window.py  ui_theme.py
inventory_app/: .env.example  CLEANUP_INTEGRATION_GUIDE.md  INFRASTRUCTURE.md  KASS.spec  MSGEMINI.spec  PREMIUM_FEATURES.md  README.md  ai_intelligence.py  alerts.py  alerts_ui.py  app_core.py  app_output.txt  audit_ui.py  auto_issue_finder.py  backup_manager.py  business_settings.py  check_unused_imports.py  dashboard_ui.py  database.py  debug2.txt  dev_dashboard.py  electronics_ui.py  error_dashboard_widget.py  error_manager.py  expiry_alerts.py  industry_selector.py  industry_service.py  industry_switcher.py  industry_ui.py  inventory_ui.py  invoicing_ui.py  lease_ui.py  license_manager.py  locations_ui.py  login_ui.py  main.py  main_clean.py  main_simple.py  main_tabs.py  migration_add_industry_type.py  (+33 more)
inventory_app/config/: __init__.py  base.py
inventory_app/data/: errors_export_20260408_094010.json  errors_export_20260408_101034.json  inventory.db  license.json  settings.json  users.json  users.json.bak
inventory_app/db/: __init__.py  base.py  core.py  inventory.py  orders.py  system.py
inventory_app/industry_services/: __init__.py
tests/: __init__.py  conftest.py  test_error_manager_comprehensive.py  test_industry_switching.py  test_models.py  test_sync_engine_loop.py
tests/test_services/: test_comprehensive.py  test_integration.py
tests/test_stability/: test_error_handling.py
tools/: build_exe.bat  check_ui_theme.py  generate_icon.py  inspect_style.py  load_ui_theme.py  smoke_test.py
(+32 files in other folders)
