# Python Project Configuration
# Supports: pyproject.toml (PEP 621), pytest, black, mypy, pylint, flake8

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mintaka-sphere-inventory"
version = "2.0.0"
description = "Mintaka Sphere Inventory Management System"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Mintaka Team", email = "support@mintaka.com"}
]
keywords = ["inventory", "management", "sqlite", "desktop"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "PySide6>=6.6.0",
    "PySide6-Addons>=6.6.0",
    "openpyxl>=3.1.2",
    "pyinstaller>=5.10.1",
    "matplotlib>=3.0.0",
    "Pillow>=9.0.0",
    "argon2-cffi>=21.3.0",
    "qrcode[pil]>=7.4",
    "python-barcode>=0.15.1",
    "reportlab>=4.0.0",
    "pyyaml>=6.0",
    "cryptography>=41.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "mypy>=1.0.0",
    "pylint>=2.17.0",
    "ruff>=0.1.0",
    "flake8>=6.0.0",
]
sync = [
    "google-auth>=2.23.0",
    "google-auth-oauthlib>=1.1.0",
    "google-api-python-client>=2.100.0",
]
scan = [
    "pyzbar>=0.1.9",
    "opencv-python>=4.8.0",
]

[project.scripts]
mintaka = "inventory_app.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["inventory_app*"]

# ============================================================
# TESTING CONFIGURATION
# ============================================================

[tool.pytest.ini_options]
testpaths = ["inventory_app", "backup_python_legacy"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short --cov=inventory_app --cov-report=term-missing"

# ============================================================
# CODE FORMATTING - BLACK
# ============================================================

[tool.black]
line-length = 100
target-version = ['py310', 'py311', 'py312']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

# ============================================================
# TYPE CHECKING - MYPY
# ============================================================

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
check_untyped_defs = true
ignore_missing_imports = true
show_error_codes = true

# ============================================================
# LINTING - RUFF (Fast Python Linter)
# ============================================================

[tool.ruff]
line-length = 100
target-version = "py310"
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]  # Allow unused imports in __init__.py

# ============================================================
# LINTING - PYLINT
# ============================================================

[tool.pylint.MASTER]
jobs = 0
persistent = true

[tool.pylint."MESSAGES CONTROL"]
disable = [
    "C0114",  # missing-module-docstring
    "C0115",  # missing-class-docstring
    "C0116",  # missing-function-docstring
    "R0903",  # too-few-public-methods
    "W0511",  # fixme
]

[tool.pylint.FORMAT]
max-line-length = 100

# ============================================================
# LINTING - FLAKE8
# ============================================================

[tool.flake8]
max-line-length = 100
extend-ignore = "E203,W503"
exclude = ".git,__pycache__,build,dist,.venv"
per-file-ignores = "__init__.py:F401"
